--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="project-name">Testrepo</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/DAccord/TestRepo" class="btn">View on GitHub</a>
+      <a href="https://github.com/DAccord/TestRepo/release/latest" class="btn">Download .exe</a>
       <a href="https://github.com/DAccord/TestRepo/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/DAccord/TestRepo/tarball/master" class="btn">Download .tar.gz</a>
     </section>
