Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <h1 class="project-name">Testrepo</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/DAccord/TestRepo" class="btn">View on GitHub</a>
-      <a href="https://github.com/DAccord/TestRepo/release/latest" class="btn">Download .exe</a>
       <a href="https://github.com/DAccord/TestRepo/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/DAccord/TestRepo/tarball/master" class="btn">Download .tar.gz</a>
     </section>
@@ -22,6 +21,8 @@
     <section class="main-content">
       <h1>
 <a id="testrepo" class="anchor" href="#testrepo" aria-hidden="true"><span class="octicon octicon-link"></span></a>TestRepo</h1>
+
+<p>Das ist neuer Text mit einem <a href="www.google.at">Link</a> auf Google.</p>
 
 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   </p>
 
