--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="https://github.com/DAccord/TestRepo/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/DAccord/TestRepo/tarball/master" class="btn">Download .tar.gz</a>
       </br>
+      <a href="https://github.com/DAccord/TestRepo/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
