--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <h1 class="project-name">Testrepo</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/DAccord/TestRepo" class="btn">View on GitHub</a>
+      <a href="https://github.com/DAccord/TestRepo/wiki" class="btn">Wiki</a>
+      </br>
       <a href="https://github.com/DAccord/TestRepo/releases/latest" class="btn">Download .exe</a>
       <a href="https://github.com/DAccord/TestRepo/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/DAccord/TestRepo/tarball/master" class="btn">Download .tar.gz</a>
-      </br>
       <a href="https://github.com/DAccord/TestRepo/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
